Added directory tree

--- a/README
+++ b/README
@@ -1,93 +1,3 @@
-.bashrc:  
+# DESI-Science_GoBears
 
-export  DMOCKS="/project/projectdirs/desi/mocks/"
-export  CHALLENGE="/project/projectdirs/desi/datachallenge/dc17b/"
-
-**************************************************
-TARGETID uniquely classifies objects across files.
-         Note:  No fake targets are included in this version.
-**************************************************
-
-03/08/18
--- QSOs 'blow a hole' in the ELG selection; how big?
-   -- Separate angular mask for ELGs, LRGs, QSOs. 
-
-03/05/2018
--- DESI focal plane has a radius of 407 mm corresponding to 1.605 deg on the sky;  The enclosed area is 8.09 sq. deg
--- IN DESI:  TILING covered all 4 pi;
--- /desimodel/data/footprint/
--- 
--- Footprint:  'In desi', DES Otherwise;
--- Footprint:  https://desi.lbl.gov/trac/browser/code/desimodel/trunk/data/footprint
---             https://desi.lbl.gov/DocDB/cgi-bin/private/RetrieveFile?docid=717;filename=note.pdf;version=2
-
-
-03/02/2018
---  TARGETID from BRICKID .25 x .25 and BRICK_OBJID; 
---  What is the exact radius of a tile (pointing) in radians.
---  What are the allowed dtypes, e.g. np.int32; numpy defaults.  
---  Difference between DESITARGET and TARGET_ID; targetmask.yaml; each bit is true/false for why target could have been selected. 
---  Healpy with openmp (for large nside); 
---  Astropy.healpy contains cone_search.py, contained in current directory.
---  To get the fractional area of a tile in a given pixel: 
-      -- oversample the healpy map with nside
-      -- find all pixels that fall in a given tile
-      -- map these back to the pixels of the original imap.
-      -- Calculate fractional area that came from each tile.       
-
-02/28/2018
---  mags pdf assumed that doesn't know about redshift -> ** no scaling of flux with redshift ** -> needs cosmology for luminosity distance.
---  5000 / 400 fibers are on sky. 
---  Sky line intensity raises Poisson error, harder to determine if there was a cosmic ray.
---  3 sigma if its a line and seven sigma to know it's a doublet (at e.g. 95% confidence).
---  see astropy fits header; fits info.
---  healpix cone lookup, where? tile to what? 
---  variation in tile depth gives non-trivial depth function in overlap regions.
---  DC17b: moniker for simulation
---  'Bright star mask': two flags, one indicates too bad to be targeted;  second flag: it might be biased but we ignored it. 
---  David Kirkby: DC17b; Data challenge coordinate. 
-
-TBD:
-0)      Params file(s):  to see what was considered; 
-i)      Cosmology?  Consistent between log mock and analysis?  Chosen from Planck likelihood chain? eh, what; Sanchez + Kirkby. 
-ii)     True answer for initial conditions? 
-iv)     Imaging conditions?  Talk to Ellie.  
-iv.5)   Imaging mask. e.g bright stars.  Not available/applied to sim currently; Adam Myers. 
-iv7.5)  What is per target seed in truth; 
-v)      How modular is the code, is it possible to rerun isolated effects.
-vi)     Can we run on randoms?  Including anything stable, e.g. dust maps, fibers, etc.
-vii)    add mock id / target id / healpix to input cats?
-viii)   HPXPIXEL -> nside in name -> ringed (nested)? 64; around sq. deg; tile -> nested. 
-ix)     what is TRANSPARENCY in exposures?  Photometric / clouds in the sky; Exposure time calculator. Fixed depth for ref. object elg. 
-x)      MJD in exposures?  Modified Julien Date;  Day of the observation.
-xi)     XFOCAL_DESIGN: mm? flat / curved?
-xiii)   what is SUBPRIORITY?  ELGs, QSos, LRGS. randoms.  
-xiv)    Should I believe any conclusions on priority from lognormal?  One month of DESI data could be n-body?
-xv)     What is MOCKID in targets truth? row number, yes.
-xvi)    OBSCONDITIONS: what is the numbering?  Conditions under which are allowed to observe object. 
-xvi.5)  What sample should be the 'cleanest', e.g. brightest objects at centre of focal plane, low dust regions, good seeing, low airmass. 	
-xvii)   Why not run of BOSS Nbody mocks rather than lognormal (for one month).
-
-xvii)   All zero:  exponential / disk?  Don't simulate size. 
-28                       SHAPEEXP_R               0.0                      0.0                      0.0                      0.0                      
-30                       SHAPEEXP_E1              0.0                      0.0                      0.0                      0.0                      
-32                       SHAPEEXP_E2              0.0                      0.0                      0.0                      0.0                      
-34                       SHAPEDEV_R               0.0                      0.0                      0.0                      0.0                      
-36                       SHAPEDEV_E1              0.0                      0.0                      0.0                      0.0                      
-38                       SHAPEDEV_E2              0.0                      0.0                      0.0                      0.0 
-
-xviii)  Fiber ra / dec same as target, or positioning error?  No positioning error.
-8                        FIBER                    0                        1                        2                        3                        
-10                       LOCATION                 95                       62                       102                      82                       
-12                       NUMTARGET                10                       15                       16                       8                        
-14                       PRIORITY                 3000                     3200                     3000                     3000                     
-16                       TARGETID                 288230450898405531       288230450873266155       288230450873258535       288230450873258515       
-
-xix)    ELGS only?  
-38                       OIIFLUX                  -1.0                     -1.0                     -1.0                     -1.0                     
-40                       HBETAFLUX                0.0                      0.0                      0.0                      0.0                      
-
-xx)     Stars?
-42                       TEFF                     -1.0                     -1.0                     -1.0                     -1.0                     
-44                       LOGG                     -1.0                     -1.0                     -1.0                     -1.0                     
-46                       FEH                      -1.0                     -1.0                     -1.0                     -1.0 
+Berkeley does DESI
